# imaginal

./: .env.example  .gitignore  Cargo.toml  README.md  SETUP.md
.github/workflows/: build.yml  lint.yml
src/: database.rs  main.rs  providers.rs  utils.rs
src/commands/: connect.rs
src/providers/: lastfm.rs  spotify.rs
src/providers/spotify/: connection.rs  mod.rs  playing.rs
src/trueblue/: mod.rs
src/trueblue/targets/: cli.rs
