[package]
name = "imaginal"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
dotenv = "0.15.0"
open = "5.3.2"
parking_lot = "0.12.4"
rand = "0.9.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
