[package]
name = "imaginal"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
base64 = "0.22.1"
clap = { version = "4.5.45", features = ["cargo", "derive"] }
dotenv = "0.15.0"
env_logger = "0.11.8"
log = "0.4.27"
rand = "0.9.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1", features = ["full"] }
